Se adicionaron algunos cambios en css para visualizar mejor tanto en canciones.html como index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="fondo1">
         <h1 class="h1">DUA LIPA</h1>
         <div class="menu">
-            <h4>Inicio</h4>
-            <h4>Todo de Dua Lipa</h4>
+            <h4><a href="index.html"></a><strong>Inicio</strong></h4>
+            <h4><a href="canciones.html"></a><strong> Todo de Dua Lipa</strong></h4>
             <h4><a href="canciones.html"><strong>Canciones</strong></a></h4>
             <h4>Podcast</h4>
             <h4>Ir a canciones</h4>
