Se modifico los html de boletas e index y se subieron dos iconos los cuales se estaran poniendo en las pestañas

--- a/boletas.html
+++ b/boletas.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Giveaway</title>
 </head>
 <body>
+    <h1 class="h1">DUA LIPA</h1>
+    <div class="menu">
+        <h4><a href="index.html">Incio</a><strong></strong></h4>
+        <h4><a href="https://www.instagram.com/dualipa/?hl=es">Todo de Dua Lipa</a></h4>
+        <h4><a href="canciones.html"><strong>Top 5</strong></a></h4>
+        <h4><a href="https://link.chtbl.com/Dua_Lipa_At_Your_Service">Podcast</a></h4>
+        <h4><a href="https://open.spotify.com/playlist/37i9dQZF1DX3fRquEp6m8D?si=58ff8b72414a41e4">Canciones Dua Lipa</a></h4>
+        <h4><a href="boletas.html">Giveaway-Boletas</a></h4>
+    
+    </div>
+    <div>    
+    <h2>Giveaway</h2>
+    <p>Te regalamos dos boletas para ir a ver a Dua Lipa en su concierto <strong>Future Nostalgia</strong> el 18 de septiembre de 2022 en el Parque Salitre Mágico, lo único que debes hacer es hacer el siguiente formulario y tus boletas pronto serán tuyas.</p>
+    <img src="/images/concierto2.jpg">
+    </div>
+    <label for="form">Tus nombres: </label>
+        <input name="nombre" id="nombre" type="text" placeholder="Dua" required="nombre"> 
+        <br><br>
+    <label for="form">Tus apellidos: </label>
+        <input name="apellido" id="apellido" type="text" placeholder="Lipa" required="nombre"> 
+        <br><br>
+    <label for="email">Ingresa el correo electrónico: </label>
+        <input type="email"id="mail" name="email">
+        <br><br>
+    <label for="control">Ingresa tu edad: </label>
+        <input name="edad" id="edad" type="number" placeholder="Ingresar edad"> 
+        <BR><br>
+    <label for="control">Número de telefono: </label>
+        <input name="telefono" id="telefono" type="number" placeholder="320589632"> 
+            <BR><br>
+    <label for="observaciones">Cuentanos ¿Por qué te gustaría estar en el concierto? </label>
+        <textarea rows="20" cols="100" name="observaciones"></textarea>
+    <br><br>
+    <label>¿Cuál es tu canción favorita de Dua Lipa?</label>  
+    <input name="cancion" id="cancion" type="checkbox">New Rules
+    <input name="cancion" id="cancion" type="checkbox">Hallucinate
+    <input name="cancion" id="cancion" type="checkbox">Don´t start now
+    <input name="cancion" id="cancion" type="checkbox">Fever
+    <input name="cancion" id="cancion" type="checkbox">Future future_nostalgia
+    <br><br>
+    <p>Si eres uno de los 10 seleccionados te estaremos mandando a tu correo una solicitud para llamarte y hacerte una preguntas para ver si consigues estas dos boletas </p>
+
+
+
     
 </body>
 </html>
