--- a/canciones.html
+++ b/canciones.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="icon" href="/images/music-solid.svg">
+    <link rel="icon" href="images/music-solid.svg">
     
     <title>Songs</title>
 </head>
@@ -26,23 +26,23 @@
 <h1 class="cancionestitulo">Top 5 Canciones: </h1> 
 <div class="canciones"> 
     <div class="cancion1">
-        <img  src="/gif/dualipa_1.gif" alt="">
+        <img  src="gif/dualipa_1.gif" alt="">
         <a href="https://www.youtube.com/watch?v=Nj2U6rhnucI"><h3>Break my heart</h3></a>
     </div>
     <div class="cancion2">
-        <img src="/gif/dualipa_2.gif" alt="" >
+        <img src="gif/dualipa_2.gif" alt="" >
         <a  href="https://www.youtube.com/watch?v=oygrmJFKYZY"><h3>Don´t start now</h3></a> 
     </div>
     <div class="cancion3">
-        <img src="/gif/dualipa_3.gif" alt=""> 
+        <img src="gif/dualipa_3.gif" alt=""> 
         <a href="https://www.youtube.com/watch?v=Mgfe5tIwOj0"><h3>IDGAF</h3></a>
     </div>
     <div class="cancion4">
-        <img src="/gif/dualipa_4.gif" alt="">
+        <img src="gif/dualipa_4.gif" alt="">
         <a href="https://www.youtube.com/watch?v=DkeiKbqa02g"><h3>One Kiss</h3></a>
     </div>
     <div class="cancion5">
-        <img src="/gif/dualipa_5.gif" alt="">
+        <img src="gif/dualipa_5.gif" alt="">
         <a href="https://www.youtube.com/watch?v=k2qgadSvNyU"><h3>New Rules</h3></a>
     </div>
 </div> 
