Quitar el / de images y css al principio
Se realizo este cambio debido a que el css luego no se podia visualizar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="icon" href="/images/icono.jpg">
+    <link rel="icon" href="images/icono.jpg">
     <script src="https://kit.fontawesome.com/d5d81529d3.js" crossorigin="anonymous"></script>
     <title>Dua Lipa</title>
 </head>
@@ -43,50 +43,50 @@
             <tr class="columna">
                 <td>Los padres de Dua lipa, un matrimonio albano-kosovar, Dukagjin Lipa y Anesa residen en Yugoslavia se ven en la necesidad de irse como refugiados a Londres por la guerra de Bosnia</td>
                 <td class="años"><strong>1992</strong></td>
-                <td><image src="/images/bosniaguerra.jpg "></image></td>
+                <td><image src="images/bosniaguerra.jpg "></image></td>
             </tr>
             <tr>
-                <td><image src="/gif/trabajar.gif "></image></td>
+                <td><image src="gif/trabajar.gif "></image></td>
                 <td class="años"><strong>1993-1994</strong> </td>
                 <td>Sus padres encuentran mayores oportunidades, por parte de su padre trabajar como promotor de festivales musicales, además estudio Marketing y su madre estudio turismo. </td>
             </tr>
             <tr>
                 <td>Nacimiento Dua Lipa <br>(23 de abril)</td>
                 <td class="años"><strong>1995</strong> </td>
-                <td><image src="/images/bebe1.jpg "></image></td>
+                <td><image src="images/bebe1.jpg "></image></td>
             </tr>
             <tr>
-                <td><image src="/gif/cello.gif" src="/images/whoanelly.jpg"></td>
+                <td><image src="gif/cello.gif" src="/images/whoanelly.jpg"></td>
                 <td class="años"><strong>2000</strong></td>
                 <td>Dua Lipa crece en un ambiente muy musical, su interés crece tanto que empieza a aprender violonchelo (Su estatura y peso no le permitía manejarlo bien)</td>
             </tr>
             <tr>
                 <td>Rina su hermana nace <br>(14 de Mayo)</td>
                 <td class="años"><strong>2001</strong></td>
-                <td><image src="/images/rina.jpg" width="200px"></image></td>
+                <td><image src="images/rina.jpg" width="200px"></image></td>
             </tr>
             <tr>
-                <td><image src="/gif/coro.gif "></image></td>
+                <td><image src="gif/coro.gif "></image></td>
                 <td class="años"><strong>2002-2004</strong></td>
                 <td>Dua Lipa quiere entrar al coro sin embargo no la aceptan por no alcanzar las notas musicales a su corta edad</td>
             </tr>
             <tr>
                 <td>Su hermano Gjin Lipa nace (30 de diciembre)</td>
                 <td class="años"><strong>2005</strong></td>
-                <td><image src="/images/gjin2.jpg "></image></td>
+                <td><image src="images/gjin2.jpg "></image></td>
             </tr>
             <tr>
-                <td><image src="/images/kosovo.png "></image></td>
+                <td><image src="images/kosovo.png "></image></td>
                 <td class="años"><strong>2006</strong></td>
                 <td>Dua Lipa a sus once años y toda su familia vuelven a Pristina, la capital de Kosovo debido a que se ganó la independencia</td>
             </tr>
             <tr>
                 <td>Dua Lipa se cría en Kosovo, esto hace hace desarrollar más su propia personalidad, descubrir nuevos estilos musicales, crecer su amor por sus raíces y darse cuenta de cuál era su sueño</td>
                 <td class="años"><strong>2007-2009</strong></td>
-                <td><image src="/gif/crecer.gif "></image></td>
+                <td><image src="gif/crecer.gif "></image></td>
             </tr>
             <tr>
-                <td> <image src="/images/londres.jfif "></image></td>
+                <td> <image src="images/londres.jfif "></image></td>
                 <td class="años"><strong>2010</strong></td>
                 <td>Dua Lipa en busca de ser una cantante mundialmente conocida a los 15 años encuentra la oportunidad de volver a Londres con una amiga muy cercana que iba a realizar un posgrado.</td>
             </tr>
@@ -107,17 +107,17 @@
                 <td><iframe width="560" height="315" src="https://www.youtube.com/embed/wB2QICuUcPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
             </tr>
             <tr>
-                <td> <image src="/gif/betheone.gif "></image></td>
+                <td> <image src="gif/betheone.gif "></image></td>
                 <td class="años"><strong>2015</strong></td>
                 <td>Su primer sencillo “New Love” La cual hizo que la compararan su voz con grandes artistas como Lady gaga, también para Octubre saco uno de los sencillos que la hizo salir al extranjero “Be the one”</td>
             </tr>
             <tr>
                 <td>Su nombre fue incluido en la lista de nominado al BBC sound, nominada a MTV European Music Awars.</td>
                 <td class="años"><strong>2016</strong></td>
-                <td><image src="/images/premio.jpg " ></image></td>
+                <td><image src="images/premio.jpg " ></image></td>
             </tr>
             <tr>
-                <td> <image src="/images/dualipa_2017.jpg "></image> </td>
+                <td> <image src="images/dualipa_2017.jpg "></image> </td>
                 <td class="años"><strong>2017</strong></td>
                 <td>Lanzamiento mundial de su carrera musical:Su primera gira en Estados Unidos.Lanzamiento de canciones como: 
                         “Scared to be Lonely” colaboración con Martin Garrix
@@ -129,10 +129,10 @@
                 <td>Sigue siendo nominada más premios y realiza una colaboración con Calvin Harris “One Kiss” Que su inconico baile llego a tik tok
                         “High” banda sonora de Cincuenta sombras liberadas</td>
                 <td class="años"><strong>2018</strong></td>
-                <td><img src="/images/Padres.jpg"></td>
+                <td><img src="images/Padres.jpg"></td>
             </tr>
             <tr>
-                <td><image src="/images/swangsong.jpg " ></image></td>
+                <td><image src="images/swangsong.jpg " ></image></td>
                 <td class="años"><strong>2019</strong></td>
                  <td>Publica “Swang Song” para la banda sonora “Battle Angel”, también pública el sencillo “Don´t Publica “Swang Song” para la banda sonora “Battle Angel”, también pública el sencillo “Don´t start Now” Anuncia publicar un segundo álbum mien tras se encuentra en los Billboard hot 100.</td>
             </tr>
@@ -141,17 +141,17 @@
                         Saco otros sencillos como “Fever” con Angéle 
                         Si quieres conocer más sobre el álbum da click acá para conocer las letras</td>
                 <td class="años"><strong>2020</strong></td>
-                <td><image src="/images/future_nostalgia.jpg " ></image></td>
+                <td><image src="images/future_nostalgia.jpg " ></image></td>
             </tr>
             <tr>
-                <td><image src="/gif/wegood.gif" ></image></td>
+                <td><image src="gif/wegood.gif" ></image></td>
                 <td class="años"><strong>2021</strong></td>
                 <td>Canción “We´re Good” y “cold heart” con Elton John</td>
             </tr>
             <tr>
                 <td>actualmente Dua Lipa esta realizando el “Future Nostalgia Tour” lo que hoy nos encontramos en los diferentes conciertos que ha ofrecido alrededor del mundo, en Colombia estará el 18 de septiembre.</td>
                 <td class="años"><strong>2022</strong></td>
-                <td><image src="/images/concierto.jpg"></image></td>
+                <td><image src="images/concierto.jpg"></image></td>
             </tr>
         
         </table>
